# RowStrengthBuild

./: .gitignore  README.md  pyproject.toml
icons/: app-icon.icns
rowstrength/: app.py
rowstrength.dist-info/: METADATA
rowstrength/data/: data_for_strength_app.json
