[tool.poetry]
name = "RowStrength by Dudhen"
version = "1.0.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"                # можно оставить <3.11, но 0.5.2 поддерживает и 3.11/3.12
toga-cocoa = "0.5.2"
std-nslog = "1.0.0"
toga-winforms = "0.5.2"
toga-ios = "0.5.2"
rubicon-objc = "0.5.2"

[tool.briefcase]
project_name = "RowStrength by Dudhen"
bundle = "com.rowstrength"
version = "1.0.0"
license = "Proprietary"
author = "Arseny Dudchenko"

[tool.briefcase.app.rowstrength]
formal_name = "RowStrength"
description = "Эргометр ↔ штанга: пересчёты времени/1ПМ с учётом веса."
icon = "icons/app-icon"
sources = ["rowstrength"]

# macOS (десктоп)
[tool.briefcase.app.rowstrength.macOS]
supported = true
requires = [
  "toga-cocoa==0.5.2",
  "std-nslog>=1.0.0"
]

# Windows (десктоп)
[tool.briefcase.app.rowstrength.windows]
supported = true
requires = ["toga-winforms==0.5.2"]

# iOS (стор/симулятор)
[tool.briefcase.app.rowstrength.iOS]
supported = true
requires = [
  "toga-ios==0.5.2",
  "std-nslog>=1.0.0",
  "rubicon-objc==0.5.2"
]
ios_deployment_target = "14.0"

# Ресурсы приложения (JSON + Privacy Manifest)
resources = [
  "rowstrength/data/data_for_rowing_app.json",
  "rowstrength/data/data_for_strength_app.json",
  "ios/PrivacyInfo.xcprivacy"
]
